# circuitos-quanticos-clifford

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
docs/: Portas Lógicas.md
src/: main.cpp  main.hpp
src/libs/: circuits.cpp  circuits.hpp  qliff.cpp  qliff.hpp
src/utils/: bitwise.c  bitwise.h  circuits.hpp
